# fart

./: README.md  meson.build  meson_options.txt
include/: meson.build
include/img/: PPM.hpp  meson.build
include/utils/: files.hpp  meson.build  utils.hpp
lib/: PPM.cpp  PPM.hpp  PPM_test.cpp
src/: main.cpp  meson.build
src/img/: PPM.cpp  meson.build
src/utils/: files.cpp  meson.build
test/: meson.build
test/img/: PPM_test.cpp  meson.build
